--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
 			<span class="set-up-text">Log In to climb in ranking!</span>
 			 <form class="login__form" id="register-div">	
           <input
-            class="login-input"
+            class="email-input"
             type="email"
             id="login-email"
             name="login-email"
@@ -45,7 +45,7 @@
             required
           />
           <input
-            class="register-input"
+            class="password-input"
             type="password"
             id="login-password"
             name="login-password"
@@ -74,5 +74,6 @@
 		<audio id="click" src="audio/click.mp3"></audio>
 		<audio id="bonus" src="audio/bonus.mp3"></audio>
 		<script src="index.js" type="module"></script>
+		<script src="firebase.js" type="module"></script>
 	</body>
 </html>
