--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,6 @@
 		<audio id="click" src="audio/click.mp3"></audio>
 		<audio id="bonus" src="audio/bonus.mp3"></audio>
 		<script src="index.js" type="module"></script>
-		<script src="firebase.js" type="module"></script>
+		<!-- <script src="firebase.js" type="module"></script> -->
 	</body>
 </html>
