--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
         <input class="volume" type="range" min="0" max="100" />
       </div>
       <span class="set-up-text">Log In to climb in ranking!</span>
-      <form class="login__form" id="register-div">
+      <div class="login__form" id="register-div">
         <input
           class="email-input"
           type="email"
@@ -62,7 +62,7 @@
           <button class="login-btn" id="log-btn">log in</button>
           <button class="register-btn" id="register-btn">register</button>
         </div>
-      </form>
+      </div>
       <div class="color-mode">
         <button class="lightmode"></button>
         <button class="darkmode"></button>
