--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
       </div>
     </div>
     <div class="timer-bg">1s</div>
+    <ul class="rank-list"></ul>
     <div class="game-over">
       <span class="final-score">CIRCLES</span>
       <span class="record">click the circles! </span>
@@ -57,7 +58,13 @@
           autocomplete="off"
           required
         />
-
+        <input
+          class="name-input"
+          type="email"
+          placeholder="Enter you'r name"
+          autocomplete="off"
+          required
+        />
         <div class="log-panel">
           <button class="login-btn" id="log-btn">log in</button>
           <button class="register-btn" id="register-btn">register</button>
@@ -67,7 +74,6 @@
         <button class="lightmode"></button>
         <button class="darkmode"></button>
       </div>
-      <ul class="rank-list"></ul>
     </div>
 
     <audio
