--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,7 @@
           placeholder="Enter you'r name"
           autocomplete="off"
           required
+          maxlength="10"
         />
         <div class="log-panel">
           <button class="login-btn" id="log-btn">log in</button>
@@ -73,6 +74,13 @@
       <div class="color-mode">
         <button class="lightmode"></button>
         <button class="darkmode"></button>
+        <button class="view-ranking">
+          <img
+            width="45px"
+            height="45px"
+            src="https://www.google.com/search?q=number+1+image&tbm=isch&ved=2ahUKEwih5eub3aX_AhUxx4sKHS_pC0cQ2-cCegQIABAA&oq=number+1+image&gs_lcp=CgNpbWcQAzIHCAAQExCABDIHCAAQExCABDIHCAAQExCABDIHCAAQExCABDIHCAAQExCABDIHCAAQExCABDIHCAAQExCABDIHCAAQExCABDIHCAAQExCABDIHCAAQExCABDoECCMQJzoICAAQCBAeEBM6CAgAEIAEELEDOgUIABCABDoHCAAQigUQQzoECAAQHlC-EVipK2DMLGgAcAB4AIABeYgBtQmSAQQxNC4xmAEAoAEBqgELZ3dzLXdpei1pbWfAAQE&sclient=img&ei=snl6ZKHEOrGOrwSv0q-4BA&bih=955&biw=1920&client=firefox-b-d#imgrc=D_jlgQAaXLW31M"
+          />
+        </button>
       </div>
     </div>
 
