--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
       <div class="color-mode">
         <button class="lightmode"></button>
         <button class="darkmode"></button>
-        <button class="view-ranking">#1</button>
+        <button class="view-ranking is-hidden">#1</button>
       </div>
     </div>
 
