--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <link href="./images/favicon.jpg" rel="icon" type="image/x-icon" />
+    <title>Circles</title>
     <script
       src="https://kit.fontawesome.com/8a4634c38a.js"
       crossorigin="anonymous"
@@ -45,7 +46,7 @@
           type="email"
           id="login-email"
           name="login-email"
-          placeholder="E-mail"
+          placeholder="random E-mail"
           autocomplete="off"
           required
         />
