--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
         <input
           class="name-input"
           type="email"
-          placeholder="Enter you'r name"
+          placeholder="Enter ur name"
           autocomplete="off"
           required
           maxlength="10"
